--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,63 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-.content-wrapper {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.content-wrapper::after {
-  content: "";
-  position: absolute;
-  top: -50%;
-  left: -50%;
-  width: 500%;
-  height: 500%;
-  background: linear-gradient(
-    45deg,
-    rgba(0, 0, 0, 0.5),
-    rgba(0, 82, 158, 1),
-    rgba(0, 181, 238, 0.3),
-    rgba(27, 0, 36, 0.7),
-    rgba(98, 5, 160, 0.2),
-    rgba(166, 21, 134, 0.8)
-  );
-  filter: blur(100px);
-  transform: rotate(45deg);
-  animation: meshAnimation 12s linear infinite;
-  z-index: -1;
-}
-
-@keyframes meshAnimation {
-  0% {
-    transform: rotate(45deg) translate(-50%, -50%);
-  }
-  100% {
-    transform: rotate(45deg) translate(50%, 50%);
-  }
+  background-color: black;
+  color: white;
 }
