--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,7 +73,7 @@ body {
 
 .gradient-bg {
   width: 100%;
-  height: 100vh;
+  height: 250vh; /*butuh fix*/
   position: relative;
   overflow: hidden;
   background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
