--- a/styles/globals.css
+++ b/styles/globals.css
@@ -184,3 +184,41 @@ body {
     opacity: 0.7;
   }
 }
+
+.search-bar-container {
+  width: 40%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 200px;
+}
+
+.input-wrapper {
+  background-color: white;
+  width: 100%;
+  border-radius: 20px;
+  height: 2.5rem;
+  border: 2px solid #00B5EE;
+  padding: 0 15px;
+  display: flex;
+  align-items: center;
+}
+
+input {
+  background-color: transparent;
+  border: none;
+  height: 100%;
+  font-size: 1.25rem;
+  width: 100%;
+  margin-left: 5px;
+  color: black;
+}
+
+input:focus {
+  outline: none;
+}
+
+#search-icon {
+  color: #00B5EE;
+}
